@@ -53,7 +53,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(m4)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.44 $)
+AC_REVISION($Revision: 1.45 $)
 AC_COPYRIGHT([Copyright (c) 1997-2003 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -90,7 +90,7 @@ dnl last version info was 4.1.2 (am-utils-6.0.4)
 dnl
 dnl We increase the minor number for am-utils-6.1, because it has a new API
 dnl (get_server_pid) but can be used without problems by am-utils-6.0.3+.
-LIBTOOL_LDFLAGS="-version-info 5:2:3"
+LIBTOOL_LDFLAGS="-version-info 5:3:3"
 AC_SUBST(LIBTOOL_LDFLAGS)
 dnl ======================================================================
 
