@@ -1,3 +1,10 @@
+2002-12-28  Ion Badulescu  <ionut@moisil.badula.org>
+
+	* configure.in: increase library patchlevel
+
+	* libamu/xutil.c (amu_release_controlling_tty): close and reopen
+	file descriptors 0,1,2 before calling setsid()
+
 2002-12-27  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* updated copyright year to 2003 on all files
